# aboutness

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aboutness/: __init__.py  app.py
src/aboutness/ui/: layout.py  widgets.py
